# django-boundary

./: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  troubleshooting.md
docs/explanation/: isolation-layers.md
docs/how-to/: add-boundary-to-an-existing-app.md  add-rls-policies-with-migrations.md  choose-and-order-resolvers.md  customise-terminology.md  provision-and-deprovision-tenants.md  run-celery-tasks-with-tenant-context.md  scope-a-function-that-holds-the-tenant.md  scope-models-through-a-relation.md  set-up-a-tenant-model.md  write-tenant-safe-tests.md
docs/reference/: settings.md
src/boundary/: __init__.py  celery.py  checks.py  conf.py  context.py  migrations_ops.py  models.py
tests/: test_celery.py  test_checks.py  test_conf.py  test_context.py  test_rls.py
