[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-boundary"
version = "0.4.0"
description = "Scalable row-level multi-tenancy for Django with PostgreSQL RLS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "ICV", email = "dev@icv.dev"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "Django>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "psycopg[binary]>=3.1",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[project.urls]
"Homepage" = "https://github.com/icvoss/django-boundary"
"Source Code" = "https://github.com/icvoss/django-boundary"
"Changelog" = "https://github.com/icvoss/django-boundary/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/icvoss/django-boundary/issues"
"Documentation" = "https://github.com/icvoss/django-boundary/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/testing/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "DJ",  # flake8-django
]
ignore = [
    "E501",   # line length handled by the formatter
    "N806",   # User = get_user_model() is standard Django convention
    "SIM105", # contextlib.suppress less readable than try/except/pass for DoesNotExist
]

[tool.ruff.lint.isort]
known-first-party = ["boundary"]

[tool.ruff.format]
quote-style = "double"
